--- a/home/dot_config/fish/functions/tadd.fish.tmpl
+++ b/home/dot_config/fish/functions/tadd.fish.tmpl
@@ -12,7 +12,7 @@ function tadd --description "Add torrent file or magnet link"
     end
 
     # Add the torrent
-    transmission-remote -n (transmission-auth) -a "$argv[1]"
+    transmission-remote {{ .transmission.rpc_host }}:{{ .transmission.rpc_port }} -n (transmission-auth) -a "$argv[1]"
 
     if test $status -eq 0
         set_color green
