--- a/home/dot_config/fish/functions/tclean.fish.tmpl
+++ b/home/dot_config/fish/functions/tclean.fish.tmpl
@@ -6,7 +6,7 @@ function tclean --description "Remove completed torrents"
     end
 
     # Get list of completed torrents (100% done)
-    set completed_ids (transmission-remote -n (transmission-auth) -l | grep "100%" | awk '{print $1}' | grep -v "*")
+    set completed_ids (transmission-remote {{ .transmission.rpc_host }}:{{ .transmission.rpc_port }} -n (transmission-auth) -l | grep "100%" | awk '{print $1}' | grep -v "*")
 
     if test -z "$completed_ids"
         echo "No completed torrents to remove"
@@ -17,7 +17,7 @@ function tclean --description "Remove completed torrents"
 
     # Remove each completed torrent
     for id in $completed_ids
-        transmission-remote -n (transmission-auth) -t $id --remove >/dev/null 2>&1
+        transmission-remote {{ .transmission.rpc_host }}:{{ .transmission.rpc_port }} -n (transmission-auth) -t $id --remove >/dev/null 2>&1
     end
 
     set_color green
