--- a/home/dot_config/fish/functions/tlist.fish.tmpl
+++ b/home/dot_config/fish/functions/tlist.fish.tmpl
@@ -5,5 +5,5 @@ function tlist --description "List active torrents"
         return 1
     end
 
-    transmission-remote -n (transmission-auth) -l
+    transmission-remote {{ .transmission.rpc_host }}:{{ .transmission.rpc_port }} -n (transmission-auth) -l
 end
