--- a/home/dot_config/fish/functions/tremove.fish.tmpl
+++ b/home/dot_config/fish/functions/tremove.fish.tmpl
@@ -12,7 +12,7 @@ function tremove --description "Remove torrent by ID"
     end
 
     # Remove the torrent (and delete local data)
-    transmission-remote -n (transmission-auth) -t $argv[1] --remove-and-delete
+    transmission-remote {{ .transmission.rpc_host }}:{{ .transmission.rpc_port }} -n (transmission-auth) -t $argv[1] --remove-and-delete
 
     if test $status -eq 0
         set_color green
